--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "angular-cli-ghpages": "^1.0.0-rc.1",
     "bootstrap": "^4.5.0",
+    "ngx-device-detector": "^2.0.5",
     "rxjs": "~6.6.0",
     "save-dev": "0.0.1-security",
     "tslib": "^2.0.0",
